--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "prestart":"chmod +x node_modules/.bin/ts-node",
     "dev":"nodemon backend/index.js",
     "start":"nodemon backend/index.js",
     "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend"
