--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "prestart":"chmod +x node_modules/.bin/ts-node",
     "dev":"nodemon backend/index.js",
-    "start":"nodemon backend/index.js",
-    "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "start":"nodemon backend/index.js"
   },
   "author": "",
   "license": "ISC",
